# cs3

./: .gitignore
crypto/: config.py  db.py  docker-compose.yml  keyboards.py  locales.py  main.py  requirements.txt
crypto/handlers/: favorites.py  start.py
crypto/services/: crypto_api.py
cs_figures/: Program.cs  Отчет.docx
go_patterns/: go.mod
go_patterns/internal/builder/: order_builder.go  order_builder_test.go  order_domain.go
homework/: .env.example  .gitattributes  .gitcommit.md  .gitignore  .golangci.yml  Cargo.toml  README.md  Taskfile.yml  bun.lockb  eslint.config.mjs  go.work  go.work.sum  package.json  rustfmt.toml
homework/.github/workflows/: lints.go.yml  lints.rust.yml
homework/apps/nexus/: .gitattributes  .gitignore  Taskfile.yaml  go.mod  go.sum  gqlgen.yml
homework/apps/stream_x/: README.md
homework/apps/stream_x/m3u8_receiver/: Cargo.toml
homework/apps/stream_x/m3u8_receiver/src/: main.rs
homework/apps/stream_x/m3u8_receiver/src/m3u8/: config.rs  errors.rs  files_manager.rs  mod.rs
homework/apps/stream_x/m3u8_receiver/src/m3u8/transport_stream/: errors.rs  mod.rs  utils.rs
homework/apps/stream_x/m3u8_receiver/src/server/: errors.rs  mod.rs
homework/apps/transfer_x/: README.md
homework/cli/: README.md  project.json
homework/config/: config.toml
lab_biquadratic/: Makefile  biquadratic.go  biquadratic_oop.py  biquadratic_procedural.py  go.mod  Отчет.docx
rk/: rk1.py
rk2/: rk2.py  rk2_test.py
rs_patterns/: Cargo.toml
rs_patterns/src/: main.rs
ts_figures/: README.md  index.ts  package.json
(+189 files in other folders)
